--- a/docs/index.tex
+++ b/docs/index.tex
@@ -109,7 +109,7 @@
 
 \title{Dplyr-like API for tech.ml.dataset}
 \author{GenerateMe}
-\date{2020-11-12}
+\date{2020-11-13}
 
 \begin{document}
 \maketitle
@@ -120,7 +120,7 @@
 \end{Highlighting}
 \end{Shaded}
 
-``5.00-alpha-25''
+``5.00-beta-2''
 
 \hypertarget{introduction}{%
 \subsection{Introduction}\label{introduction}}
@@ -645,7 +645,7 @@ true
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{(api/write-nippy! DS }\StringTok{"output.nippy.gz"}\NormalTok{)}
+\NormalTok{(api/write! DS }\StringTok{"output.nippy.gz"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -655,11 +655,11 @@ nil
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{(api/read-nippy }\StringTok{"output.nippy.gz"}\NormalTok{)}
+\NormalTok{(api/dataset }\StringTok{"output.nippy.gz"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
-\_unnamed {[}9 4{]}:
+output.nippy.gz {[}9 4{]}:
 
 \begin{longtable}[]{@{}llll@{}}
 \toprule
@@ -1055,7 +1055,7 @@ Rows as sequence of sequences
 \end{Shaded}
 
 \begin{verbatim}
-([#object[java.time.LocalDate 0x71befa12 "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x717ddd66 "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
+([#object[java.time.LocalDate 0x7fd56d5b "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x331c098c "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -1069,13 +1069,13 @@ Rows as sequence of maps
 \end{Shaded}
 
 \begin{verbatim}
-({"date" #object[java.time.LocalDate 0x6b77254e "2012-01-01"],
+({"date" #object[java.time.LocalDate 0x1ac3c92 "2012-01-01"],
   "precipitation" 0.0,
   "temp_min" 5.0,
   "weather" "drizzle",
   "temp_max" 12.8,
   "wind" 4.7}
- {"date" #object[java.time.LocalDate 0x6fc94996 "2012-01-02"],
+ {"date" #object[java.time.LocalDate 0x47564135 "2012-01-02"],
   "precipitation" 10.9,
   "temp_min" 2.8,
   "weather" "rain",
@@ -2861,7 +2861,7 @@ You can also pass mapping function with optional columns-selector
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@3b27def9}{\nolinkurl{java.lang.Object@3b27def9}}\tabularnewline
+\href{mailto:java.lang.Object@5decee3e}{\nolinkurl{java.lang.Object@5decee3e}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5 & A\tabularnewline
@@ -2955,7 +2955,7 @@ Function works on grouped dataset
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@6ac06adc}{\nolinkurl{java.lang.Object@6ac06adc}}\tabularnewline
+\href{mailto:java.lang.Object@6940fee9}{\nolinkurl{java.lang.Object@6940fee9}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5 & A\tabularnewline
@@ -2971,7 +2971,7 @@ v1 & v2 & {[}1 2 3{]} &
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@6ac06adc}{\nolinkurl{java.lang.Object@6ac06adc}}\tabularnewline
+\href{mailto:java.lang.Object@6940fee9}{\nolinkurl{java.lang.Object@6940fee9}}\tabularnewline
 \midrule
 \endhead
 2 & 2 & 1.0 & B\tabularnewline
@@ -3064,15 +3064,15 @@ Replace one column (column is trimmed)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-0.3388 & 1 & 0.5 & A\tabularnewline
-0.4417 & 2 & 1.0 & B\tabularnewline
-0.6601 & 3 & 1.5 & C\tabularnewline
-0.7802 & 4 & 0.5 & A\tabularnewline
-0.3040 & 5 & 1.0 & B\tabularnewline
-0.03061 & 6 & 1.5 & C\tabularnewline
-0.4148 & 7 & 0.5 & A\tabularnewline
-0.6117 & 8 & 1.0 & B\tabularnewline
-0.1287 & 9 & 1.5 & C\tabularnewline
+0.1969 & 1 & 0.5 & A\tabularnewline
+0.7379 & 2 & 1.0 & B\tabularnewline
+0.3101 & 3 & 1.5 & C\tabularnewline
+0.9609 & 4 & 0.5 & A\tabularnewline
+0.5936 & 5 & 1.0 & B\tabularnewline
+0.3647 & 6 & 1.5 & C\tabularnewline
+0.06221 & 7 & 0.5 & A\tabularnewline
+0.4084 & 8 & 1.0 & B\tabularnewline
+0.2924 & 9 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3439,14 +3439,14 @@ map.
 \midrule
 \endhead
 1 & 2 & 0.5 & A\tabularnewline
-2 & 1 & 1.0 & B\tabularnewline
+2 & 3 & 1.0 & B\tabularnewline
+1 & 6 & 1.5 & C\tabularnewline
+2 & 5 & 0.5 & A\tabularnewline
+1 & 7 & 1.0 & B\tabularnewline
+2 & 8 & 1.5 & C\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+2 & 9 & 1.0 & B\tabularnewline
 1 & 4 & 1.5 & C\tabularnewline
-2 & 8 & 0.5 & A\tabularnewline
-1 & 3 & 1.0 & B\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
-2 & 5 & 1.0 & B\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3799,7 +3799,7 @@ Double array conversion.
 \end{Shaded}
 
 \begin{verbatim}
-#object["[J" 0x355b5 "[J@355b5"]
+#object["[J" 0xe2e0e40 "[J@e2e0e40"]
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3815,7 +3815,7 @@ Function also works on grouped dataset
 \end{Shaded}
 
 \begin{verbatim}
-(#object["[J" 0x5d3b16b3 "[J@5d3b16b3"] #object["[J" 0x54b84cf2 "[J@54b84cf2"] #object["[J" 0xd2f246d "[J@d2f246d"])
+(#object["[J" 0x767da5fa "[J@767da5fa"] #object["[J" 0x728d3599 "[J@728d3599"] #object["[J" 0x554a1cd "[J@554a1cd"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3830,8 +3830,8 @@ You can also cast the type to the other one (if casting is possible):
 \end{Shaded}
 
 \begin{verbatim}
-#object["[Ljava.lang.String;" 0x53024691 "[Ljava.lang.String;@53024691"]
-#object["[F" 0x480668b1 "[F@480668b1"]
+#object["[Ljava.lang.String;" 0x1326905c "[Ljava.lang.String;@1326905c"]
+#object["[F" 0x8225cf4 "[F@8225cf4"]
 \end{verbatim}
 
 \hypertarget{rows}{%
@@ -4108,7 +4108,7 @@ Random row (single)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 5 & 1.0 & B\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4150,15 +4150,15 @@ Random \texttt{n} (default: row count) rows with repetition.
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 9 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 2 & 4 & 0.5 & A\tabularnewline
-1 & 5 & 1.0 & B\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4179,11 +4179,11 @@ Five random rows with repetition
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 6 & 1.5 & C\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4204,11 +4204,11 @@ Five random, non-repeating rows
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 3 & 1.5 & C\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 1 & 1 & 0.5 & A\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
+2 & 8 & 1.0 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4254,15 +4254,15 @@ Shuffle dataset
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 7 & 0.5 & A\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
 1 & 3 & 1.5 & C\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4440,21 +4440,21 @@ Select 5 random rows from each group
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0.5 & A\tabularnewline
 1 & 7 & 0.5 & A\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
 2 & 4 & 0.5 & A\tabularnewline
 2 & 4 & 0.5 & A\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+2 & 8 & 1.0 & B\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-1 & 3 & 1.5 & C\tabularnewline
-1 & 3 & 1.5 & C\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
-1 & 3 & 1.5 & C\tabularnewline
 1 & 9 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -5246,8 +5246,8 @@ Random
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 3 & 1.5 & C\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -8989,10 +8989,10 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :y1 & :y2 & :z1 & :z2\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 0.40259297 & 0.17645975 & 3 & -2\tabularnewline
-2 & 1 & 1 & 0.33208654 & 0.32835110 & 3 & -2\tabularnewline
-3 & 0 & 1 & 0.01063670 & 0.78199482 & 3 & -2\tabularnewline
-4 & 0 & 1 & 0.35998293 & 0.09564295 & 3 & -2\tabularnewline
+1 & 1 & 0 & 0.17219166 & 0.14981220 & 3 & -2\tabularnewline
+2 & 1 & 1 & 0.60383318 & 0.11976029 & 3 & -2\tabularnewline
+3 & 0 & 1 & 0.00042041 & 0.00160839 & 3 & -2\tabularnewline
+4 & 0 & 1 & 0.97625783 & 0.11553385 & 3 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -9010,14 +9010,14 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :times & y & z\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 1 & 0.40259297 & 3\tabularnewline
-2 & 1 & 1 & 1 & 0.33208654 & 3\tabularnewline
-3 & 0 & 1 & 1 & 0.01063670 & 3\tabularnewline
-4 & 0 & 1 & 1 & 0.35998293 & 3\tabularnewline
-1 & 1 & 0 & 2 & 0.17645975 & -2\tabularnewline
-2 & 1 & 1 & 2 & 0.32835110 & -2\tabularnewline
-3 & 0 & 1 & 2 & 0.78199482 & -2\tabularnewline
-4 & 0 & 1 & 2 & 0.09564295 & -2\tabularnewline
+1 & 1 & 0 & 1 & 0.17219166 & 3\tabularnewline
+2 & 1 & 1 & 1 & 0.60383318 & 3\tabularnewline
+3 & 0 & 1 & 1 & 0.00042041 & 3\tabularnewline
+4 & 0 & 1 & 1 & 0.97625783 & 3\tabularnewline
+1 & 1 & 0 & 2 & 0.14981220 & -2\tabularnewline
+2 & 1 & 1 & 2 & 0.11976029 & -2\tabularnewline
+3 & 0 & 1 & 2 & 0.00160839 & -2\tabularnewline
+4 & 0 & 1 & 2 & 0.11553385 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -11772,31 +11772,31 @@ null {[}27 4{]}:
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0.5 & A\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
 2 & 4 & 0.5 & A\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
 1 & 1 & 0.5 & A\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
+2 & 8 & 1.0 & B\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
 1 & 7 & 0.5 & A\tabularnewline
 2 & 2 & 1.0 & B\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
+2 & 8 & 1.0 & B\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 1 & 7 & 0.5 & A\tabularnewline
 2 & 2 & 1.0 & B\tabularnewline
 2 & 4 & 0.5 & A\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
 2 & 2 & 1.0 & B\tabularnewline
-1 & 3 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -11854,15 +11854,15 @@ union {[}9 4{]}:
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
+2 & 8 & 1.0 & B\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
 1 & 3 & 1.5 & C\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
 1 & 1 & 0.5 & A\tabularnewline
 1 & 7 & 0.5 & A\tabularnewline
 2 & 2 & 1.0 & B\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -14029,9 +14029,9 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 4 & 0.5 & A\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -14048,11 +14048,11 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0.5 & A\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-1 & 5 & 1.0 & B\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+2 & 8 & 1.0 & B\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -16784,7 +16784,7 @@ Write data to a tab-delimited file
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{(api/write-csv! DS }\StringTok{"DF.txt"}\NormalTok{ \{}\AttributeTok{:separator} \CharTok{\textbackslash{}tab}\NormalTok{\})}
+\NormalTok{(api/write! DS }\StringTok{"DF.txt"}\NormalTok{ \{}\AttributeTok{:separator} \CharTok{\textbackslash{}tab}\NormalTok{\})}
 \end{Highlighting}
 \end{Shaded}
 
